Compile fix. Add gradle application plugin.